2007-06-04  Maximilien Cuony
        * What is new windows.
        * Editor works perfectly !
2007-06-03  Maximilien Cuony
        * Begining of transform showtext into a text editor (already done: Open, Save, Crypt)
        * Added menu entrie for Editor

2007-05-31  Maximilien Cuony
        * Gmail: Ask keys BEFORE passparse for sign.
        * Site: Correct a mistake with 'turc'
        * Site: Added the plugin's md5.
        * Added Simplified Chinese and Traditional Chinese locate.
        * Added Dutch locate.

2007-04-06  Maximilien Cuony
        * 0.3.3 Packed, and uploaded to the server !
        * Try to solve the Mac's options' window problem.
        * Option to set the default for memory the pass
        * Spanish translation by Nukeador
	* Türkish translation by Alparslan Ozturk
	* Charset in Polish translation
	* 0.3.2.1 Packed, and uploaded to the server !

2007-04-06  Achraf Cherti
        * toolbar button changed to firegpg.png.
	* 0.3.2.1 released.
	* all translations are declared in chrome.manifest.


2007-04-05  Maximilien Cuony
	* 0.3.2 Packed, and uploaded to the server !
	* German translation by stephan.klein at gmx dot at
	* Extend the width of lists window
	* Fix problems with options' windows and some themes (like Noia)
	* Apply hometoast's patch for windows
	* Polish translation by Kacper86 melki at interecho dot com
	* Portuguese translation by Antonio Manuel Dias ammdias at gmail dot com
	* English corrections (by Chad)
	* po -> pl

2007-04-05  Achraf cherti
	* some warnings fixed in cgpg.js and cgmail.js.
	* size of dialogs fixed (password, options, etc.).
	* italian translation by Alessandro Pascali
	  (alessandro.pascali /at/ gmail |dot| com).
	* the size of listbox is modified.
	* new option, to ask for private key (in the options dialog).
	* license added in COPYING.

2007-04-04  Maximilien Cuony
	* 0.3.1 Packed, and uploaded to the server !
	* export to kexport, for FF 1.5
	* remove and fore --no-agent
	* add some error messages